add: swagger for user APIs
